# cosmos-ml-cluster-2026

./: .envrc  .gitignore  .ruby-gemset  AGENTS.md  Makefile  _config.yml  emnist_predictions.csv  index.md  lab10_nn_lab.ipynb  lab8_movie_review_sentiment_analysis.ipynb  lab9_Spam_Filter_Lab.ipynb  pyproject.toml  resources.md  showcase.md  staff.md
_layouts/: staffer.html
_modules/: week-01.md  week-02.md  week-03.md  week-04.md
_sass/custom/: staffer.scss
_staffers/: anand.md  fine.md  hong.md  lau.md  liao.md  nath.md  yu.md
_staffersnobio/: lau.md  liao.md
labs/: otter-config.yml
labs/lab01/src/: lab01.ipynb
labs/lab02/src/: lab02.ipynb
labs/lab03/src/: lab03.ipynb
labs/lab04/src/: lab04.ipynb
labs/lab05/src/: lab05.ipynb
labs/lab06/src/: lab06.ipynb
labs/lab07/data-prep/: build_notebook.py  prepare_data.py
labs/lab07/src/: lab07.ipynb
labs/lab08/: lab08_movie_review_sentiment_analysis.ipynb
labs/lab09/: lab09_spam_filter.ipynb
labs/lab10/: lab10_nn_lab.ipynb
lectures/lec01/: lec01.ipynb
lectures/lec02/: lec02.ipynb
lectures/lec03/: lec03.ipynb
lectures/lec04/: lec04.ipynb
lectures/lec05/: lec05.ipynb
lectures/lec06/: lec06.ipynb
lectures/lec06/data-prep/: data-prep.ipynb
lectures/lec07/: lec07.ipynb
lectures/lec07/data-prep/: analyze_candidates.py  build_teaching_subset.py  candidate-feature-pair-scores.csv  candidate-summary.csv  recommended-knn-comparison.csv
lectures/lec08/: lec08.ipynb
lectures/lec08/data/: toy-moons.csv
lectures/lec08/data-prep/: build_notebook.py  generate_toy_data.py
lectures/lec09/: lec09.ipynb
lectures/lec09/data-prep/: build_notebook.py
lectures/lec12/: lec12_mnist_mlp.ipynb
projects/: index.md  proj01.md  proj02.md  proj03.md  proj04.md
projects/proj01/: index.md
projects/proj02/: index.md  sams-notes.md  steel_plate_faults.ipynb  submission.csv
projects/proj02/data-prep/: README.md  generate_sandbox_submissions.py  prepare_data.py
projects/proj03/: index.md  lab8-testing-aids.ipynb
projects/proj1/: index.md  license_plates.ipynb  restaurants.ipynb
scripts/: cosmos.py  emnist_benchmark.py  emnist_processor.py
(+9 files in other folders)
