[project]
name = "cosmos-ml-cluster"
version = "0.1.0"
description = "COSMOS ML Cluster"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.6.1,<4.7.0",
    "jupyterlab-server>=2.28.0,<2.29.0",
    "jupyterlab-widgets>=3.0.16,<3.1.0",
    "matplotlib>=3.11.0,<3.12.0",
    "matplotlib-inline>=0.2.2,<0.2.3",
    "nbconvert>=7.17.1,<7.18.0",
    "nbformat>=5.10.4,<5.11.0",
    "notebook>=7.6.0,<7.7.0",
    "numpy>=2.5.0,<2.6.0",
    "otter-grader==6.1.6",
    "pandas>=3.0.3,<3.1.0",
    "plotly>=6.8.0,<6.9.0",
    "scikit-learn>=1.9.0,<1.10.0",
    "seaborn>=0.13.2,<0.13.3",
    "typer>=0.20.0,<0.21.0",
    "tqdm>=4.68.3,<4.69.0",
]

[project.optional-dependencies]
dev = [
    "pyperclip>=1.11.0,<1.12.0",
    "ty>=0.0.56,<0.0.57",
]
sam = [
    "jupyterlab-vim>=4.1.4,<4.2.0",
]

[tool.pyright]
exclude = ["**/*ipynb"]
